@@ -38,6 +38,8 @@ string(1) "0"
 
 Warning: gmp_fact(): Number has to be greater than or equal to 0 in %s on line %d
 string(1) "0"
+
+Warning: gmp_fact(): Number has to be an integer in %s on line %d
 string(1) "1"
 string(19) "2432902008176640000"
 string(65) "30414093201713378043612608166064768844377641568960512000000000000"
@@ -53,9 +55,13 @@ NULL
 
 Warning: gmp_fact() expects exactly 1 parameter, 2 given in %s on line %d
 NULL
+
+Warning: gmp_fact(): Number has to be an integer in %s on line %d
 object(GMP)#%d (1) {
   ["num"]=>
   string(1) "1"
 }
+
+Warning: gmp_fact(): Number has to be an integer in %s on line %d
 string(1) "1"
 Done
